fixed issue with image wrapping on  medium-sized screens

--- a/app/styles/modules/mobile/_artwork.scss
+++ b/app/styles/modules/mobile/_artwork.scss
@@ -1,4 +1,4 @@
-@media (min-width : 320px) and (max-width : 480px){
+@media (min-width : 320px) and (max-width : 650px){
   .artwork{
     max-width: 300px;
     margin: 0 auto;
@@ -75,7 +75,7 @@
   }
 }
 
-@media (min-width : 480px)
+@media (min-width : 650px)
 and (max-width : 1000px) {
   .artwork{
     max-width: 650px;
